--- a/packages.bib
+++ b/packages.bib
@@ -31,14 +31,14 @@
   title = {car: Companion to Applied Regression},
   author = {John Fox and Sanford Weisberg and Brad Price},
   year = {2018},
-  note = {R package version 3.0-2},
+  note = {R package version 3.0-1},
   url = {https://CRAN.R-project.org/package=car},
 }
 @Manual{R-carData,
   title = {carData: Companion to Applied Regression Data Sets},
   author = {John Fox and Sanford Weisberg and Brad Price},
   year = {2018},
-  note = {R package version 3.0-2},
+  note = {R package version 3.0-1},
   url = {https://CRAN.R-project.org/package=carData},
 }
 @Manual{R-colorspace,
@@ -59,7 +59,7 @@
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
   year = {2018},
-  note = {R package version 1.11.8},
+  note = {R package version 1.11.4},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 @Manual{R-dplyr,
@@ -178,7 +178,7 @@
   title = {Matrix: Sparse and Dense Matrix Classes and Methods},
   author = {Douglas Bates and Martin Maechler},
   year = {2018},
-  note = {R package version 1.2-15},
+  note = {R package version 1.2-14},
   url = {https://CRAN.R-project.org/package=Matrix},
 }
 @Manual{R-MuMIn,
@@ -203,10 +203,10 @@
   url = {https://CRAN.R-project.org/package=nlme},
 }
 @Manual{R-optimx,
-  title = {optimx: Expanded Replacement and Extension of the 'optim' Function},
+  title = {optimx: A Replacement and Extension of the optim() Function},
   author = {John C Nash and Ravi Varadhan},
-  year = {2018},
-  note = {R package version 2018-7.10},
+  year = {2014},
+  note = {R package version 2013.8.7},
   url = {https://CRAN.R-project.org/package=optimx},
 }
 @Manual{R-pander,
@@ -256,7 +256,7 @@ Research},
   title = {sjPlot: Data Visualization for Statistics in Social Science},
   author = {Daniel Lüdecke},
   year = {2018},
-  note = {R package version 2.6.0},
+  note = {R package version 2.5.0},
   url = {https://CRAN.R-project.org/package=sjPlot},
 }
 @Manual{R-sjstats,
