GLMM muscatine example

--- a/51_example_gee_Leprosy.Rmd
+++ b/51_example_gee_Leprosy.Rmd
@@ -43,9 +43,9 @@ library(texreghelpr)
 ```
 
 
-## Prepare and get to know the dataset
+## Data
 
-### Read in the data
+### Import
 
 
 ```{block type='rmdlink', echo=TRUE}
