change chapter titles

--- a/06-example_hox2_nurses.Rmd
+++ b/06-example_hox2_nurses.Rmd
@@ -1,4 +1,4 @@
-# Intro 3-Level Model Example: Nurse's Stress Intervention
+# MLM, 3 levels: Nurse's Stress Intervention
 
 ![](images/header_hox_nurses.png)
 
