--- a/07-example_finch_read.Rmd
+++ b/07-example_finch_read.Rmd
@@ -1,4 +1,5 @@
-# Intro Centering and Scaling Example: Reading Achievement (2-levels only)
+# MLM, Centering/Scaling: Reading Achievement (2-levels only)
+
 
 
 ```{r, include=FALSE}
