--- a/11-example_autism.Rmd
+++ b/11-example_autism.Rmd
@@ -1,4 +1,4 @@
-# Longitudinal Intro:  Example - Autism
+# MLM, Longitudinal: Autism
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(comment     = "",
