--- a/15-exercise_diet.Rmd
+++ b/15-exercise_diet.Rmd
@@ -1,4 +1,4 @@
-# Longitudinal MLM: RCT - Exercise and Diet
+# MLM, Longitudinal: RCT - Exercise and Diet
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(comment     = "",
