--- a/71_example_glmm_muscatine.Rmd
+++ b/71_example_glmm_muscatine.Rmd
@@ -1,4 +1,4 @@
-# GLMM, Binary Outcome: Antibiotics for Leprosy
+# GLMM, Binary Outcome: Muscatine Obesity
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(comment     = "",
