--- a/packages.bib
+++ b/packages.bib
@@ -31,14 +31,14 @@
   title = {car: Companion to Applied Regression},
   author = {John Fox and Sanford Weisberg and Brad Price},
   year = {2018},
-  note = {R package version 3.0-1},
+  note = {R package version 3.0-2},
   url = {https://CRAN.R-project.org/package=car},
 }
 @Manual{R-carData,
   title = {carData: Companion to Applied Regression Data Sets},
   author = {John Fox and Sanford Weisberg and Brad Price},
   year = {2018},
-  note = {R package version 3.0-1},
+  note = {R package version 3.0-2},
   url = {https://CRAN.R-project.org/package=carData},
 }
 @Manual{R-colorspace,
@@ -59,14 +59,14 @@
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
   year = {2018},
-  note = {R package version 1.11.4},
+  note = {R package version 1.11.8},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2018},
-  note = {R package version 0.7.6},
+  note = {R package version 0.7.8},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 @Manual{R-effects,
@@ -84,11 +84,10 @@
   url = {https://CRAN.R-project.org/package=forcats},
 }
 @Manual{R-furniture,
-  title = {furniture: Tables for Quantitative Scientists},
+  title = {furniture: Furniture for Quantitative Scientists},
   author = {Tyson S. Barrett and Emily Brignone and Daniel J. Laxman},
   year = {2018},
-  note = {R package version 1.8.0},
-  url = {https://CRAN.R-project.org/package=furniture},
+  note = {R package version 1.8.7},
 }
 @Manual{R-gee,
   title = {gee: Generalized Estimation Equation Solver},
@@ -108,7 +107,7 @@
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo},
   year = {2018},
-  note = {R package version 3.0.0},
+  note = {R package version 3.1.0},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 @Manual{R-gridExtra,
@@ -122,7 +121,7 @@
   title = {haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files},
   author = {Hadley Wickham and Evan Miller},
   year = {2018},
-  note = {R package version 1.1.2},
+  note = {R package version 2.0.0},
   url = {https://CRAN.R-project.org/package=haven},
 }
 @Manual{R-hexbin,
@@ -164,7 +163,7 @@
   title = {lme4: Linear Mixed-Effects Models using 'Eigen' and S4},
   author = {Douglas Bates and Martin Maechler and Ben Bolker and Steven Walker},
   year = {2018},
-  note = {R package version 1.1-18-1},
+  note = {R package version 1.1-19},
   url = {https://CRAN.R-project.org/package=lme4},
 }
 @Manual{R-lmerTest,
@@ -192,7 +191,7 @@
   title = {naniar: Data Structures, Summaries, and Visualisations for Missing Data},
   author = {Nicholas Tierney and Di Cook and Miles McBain and Colin Fay},
   year = {2018},
-  note = {R package version 0.4.0.0},
+  note = {R package version 0.4.1},
   url = {https://CRAN.R-project.org/package=naniar},
 }
 @Manual{R-nlme,
@@ -203,17 +202,17 @@
   url = {https://CRAN.R-project.org/package=nlme},
 }
 @Manual{R-optimx,
-  title = {optimx: A Replacement and Extension of the optim() Function},
+  title = {optimx: Expanded Replacement and Extension of the 'optim' Function},
   author = {John C Nash and Ravi Varadhan},
-  year = {2014},
-  note = {R package version 2013.8.7},
+  year = {2018},
+  note = {R package version 2018-7.10},
   url = {https://CRAN.R-project.org/package=optimx},
 }
 @Manual{R-pander,
   title = {pander: An R 'Pandoc' Writer},
   author = {Gergely Daróczi and Roman Tsegelskyi},
   year = {2018},
-  note = {R package version 0.6.2},
+  note = {R package version 0.6.3},
   url = {https://CRAN.R-project.org/package=pander},
 }
 @Manual{R-psych,
@@ -221,7 +220,7 @@
 Research},
   author = {William Revelle},
   year = {2018},
-  note = {R package version 1.8.4},
+  note = {R package version 1.8.10},
   url = {https://CRAN.R-project.org/package=psych},
 }
 @Manual{R-purrr,
@@ -241,8 +240,8 @@ Research},
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Romain Francois},
-  year = {2017},
-  note = {R package version 1.1.1},
+  year = {2018},
+  note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=readr},
 }
 @Manual{R-rmarkdown,
@@ -256,7 +255,7 @@ Research},
   title = {sjPlot: Data Visualization for Statistics in Social Science},
   author = {Daniel Lüdecke},
   year = {2018},
-  note = {R package version 2.5.0},
+  note = {R package version 2.6.1},
   url = {https://CRAN.R-project.org/package=sjPlot},
 }
 @Manual{R-sjstats,
@@ -264,7 +263,7 @@ Research},
 Computations},
   author = {Daniel Lüdecke},
   year = {2018},
-  note = {R package version 0.17.0},
+  note = {R package version 0.17.2},
   url = {https://CRAN.R-project.org/package=sjstats},
 }
 @Manual{R-stargazer,
@@ -305,7 +304,7 @@ Computations},
   title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
   author = {Hadley Wickham and Lionel Henry},
   year = {2018},
-  note = {R package version 0.8.1},
+  note = {R package version 0.8.2},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 @Manual{R-tidyverse,
